--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/qs": "^6.9.17",
     "@types/react-google-recaptcha": "^2.1.9",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.8",
     "child_process": "^1.0.2",
     "class-variance-authority": "^0.7.0",
